2015-02-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_termios.cc (fhandler_termios::line_edit): Fix condition
	for writing remaining bytes in readahead buffer in non-canonical mode.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Always grant default owner entry
	STANDARD_RIGHTS_ALL and FILE_WRITE_ATTRIBUTES access, too.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tape.cc (fhandler_dev_tape::_lock): Add cw_sig_restart to
	cygwait call.
	* thread.cc (pthread_mutex::lock): Ditto.
	(semaphore::_timedwait): Fix formatting.
	(semaphore::_wait): Ditto.
	* thread.h (fast_mutex::lock): Ditto.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Don't apply temporary workaround for chmod
	to DEF_USER_OBJ, DEF_GROUP_OBJ, and DEF_OTHER_OBJ ACEs.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_pty_slave::read): Having no input is not an
	error condition for tcflush.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Fix comment style.  Remove code unused for
	years.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Add temporary workaround which disallows
	any secondary user to have more permissions than the primary group
	in calls to chmod.  Add comment to explain why.

2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (client_request_pwdgrp::client_request_pwdgrp): Add missing
	break in switch statement.

2015-02-24  Corinna Vinschen  <corinna@vinschen.de>

	* ldap.h: Remove index macros.
	(class cyg_ldap): Remove members srch_msg and srch_entry.
	(cyg_ldap::get_string_attribute): Remove private method taking index
	argument.
	(cyg_ldap::get_num_attribute): Ditto.  Add method taking attribute name.
	(cyg_ldap::get_primary_gid): Adjust to aforementioned change.
	(cyg_ldap::get_unix_uid): Ditto.
	(cyg_ldap::get_unix_gid): Ditto.