@@ -1,5 +1,16 @@
 2015-02-26  Corinna Vinschen  <corinna@vinschen.de>
 
+	* posix_ipc.cc (ipc_mutex_lock): Add bool parameter to influence if
+	cygwait should be in EINTR or in restart mode.  Call signal handler
+	if in EINTR mode.
+	(mq_getattr): Call ipc_mutex_lock in restart mode.
+	(mq_setattr): Ditto.
+	(mq_notify): Ditto.
+	(_mq_send): Call ipc_mutex_lock in EINTR mode.
+	(_mq_receive): Ditto.
+
+2015-02-26  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_termios.cc (fhandler_termios::line_edit): Fix condition
 	for writing remaining bytes in readahead buffer in non-canonical mode.
 
